Fix Horizontal Scrolling

--- a/src/components/Pages/Contacts/index.module.scss
+++ b/src/components/Pages/Contacts/index.module.scss
@@ -10,7 +10,6 @@
 .Wave {
     position: absolute;
     transform: rotate(180deg);
-    min-width: 1400px;
     margin: -1%;
     z-index: 0;
 }
@@ -55,7 +54,6 @@
 
 .Button {
     padding: 10% 10% 10% 10%;
-    width: 120%;
     height: 100%;
     background: $background-color;
     border: none;
@@ -69,7 +67,7 @@
     }
 
     a {
-        width: 100%;
+        width: 200px;
         height: 100%;
         font-weight: bolder;
         text-decoration: none;
@@ -119,10 +117,6 @@
         z-index: -2;
         width: 100%;
         height: 100%;
-    }
-
-    .Wave {
-        min-width: 500px;
     }
 
     .MainContainer {
