--- a/src/components/Pages/Home/index.module.scss
+++ b/src/components/Pages/Home/index.module.scss
@@ -71,7 +71,6 @@
 
 .Wave {
     width: 100%;
-    min-width: 1400px;
     bottom: 0;
     margin: 0 0 -1%;
     margin-top: auto;
@@ -84,9 +83,5 @@
         width: 100vw;
         margin: 0;
         padding: 0;
-    }
-
-    .Wave {
-        min-width: 500px;
     }
 }
