--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -9,8 +9,10 @@ html,
 body {
     height: 100%;
     width: 100%;
-    margin: 0;
-    padding: 0;
+    margin: 0 0 0 0;
+    padding: 0 0 0 0;
+    max-width: 100%;
+    overflow-x: hidden;
 }
 
 @media only screen and (max-width: 768px) {
